--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,8 +1,13 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="home">
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Home</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon aria-hidden="true" name="earth"></ion-icon>
+      <ion-label>Website</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
@@ -14,5 +19,6 @@
       <ion-icon aria-hidden="true" name="square"></ion-icon>
       <ion-label>Tab 3</ion-label>
     </ion-tab-button>
+    
   </ion-tab-bar>
 </ion-tabs>
