--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,9 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-background-color: #a7a7a7;
+
+
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
