--- a/src/app/tabhome/tabhome.page.html
+++ b/src/app/tabhome/tabhome.page.html
@@ -36,7 +36,7 @@
       <ion-icon name="person"></ion-icon>
       <p>Alumni</p>
     </div>
-    <div class="menu-item">
+    <div class="menu-item" (click)="gotoPrakerin()">
       <ion-icon name="business"></ion-icon>
       <p>Praktik Industri</p>
     </div>
