--- a/src/app/prakerin/pages/jurnal/jurnal.page.html
+++ b/src/app/prakerin/pages/jurnal/jurnal.page.html
@@ -18,7 +18,7 @@
 
   <ion-card *ngIf="pinnedSiswa.length > 0">
     <ion-card-header>
-      <ion-card-title>Pinned Siswa</ion-card-title>
+      <ion-card-title>Nama di-Pin</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-item *ngFor="let siswa of pinnedSiswa">
