--- a/src/app/prakerin/pages/logs.siswa/logs.siswa.page.html
+++ b/src/app/prakerin/pages/logs.siswa/logs.siswa.page.html
@@ -13,5 +13,5 @@
       <ion-title size="large">logs.siswa</ion-title>
     </ion-toolbar>
   </ion-header>
-  <h1>Sabar sebagian dari iman 🤲🤲🤲</h1>
+  <h1>Thank you visiting this page😘😘😘</h1>
 </ion-content>
