--- a/src/app/prakerin/pages/prakerin.home/prakerin.home.page.html
+++ b/src/app/prakerin/pages/prakerin.home/prakerin.home.page.html
@@ -15,27 +15,27 @@
   </ion-header>
 
   <div class="content">
-    <ion-button (click)="gotoJurnalGuru()">
+    <ion-button (click)="gotoJurnalGuru()" color="primary">
       <ion-icon slot="start" name="book"></ion-icon>
       Jurnal Guru
     </ion-button>
-    <ion-button (click)="gotoPresensi()">
+    <ion-button (click)="gotoPresensi()" color="secondary">
       <ion-icon slot="start" name="finger-print"></ion-icon>
       Rekap Presensi Pesdik
     </ion-button>
 
-    <ion-button (click)="gotoJurnal()">
+    <ion-button (click)="gotoJurnal()" color="tertiary">
       <ion-icon slot="start" name="list-outline"></ion-icon>
       Jurnal Prakerin Pesdik
     </ion-button>
-    <ion-button (click)="gotoReset()">
+    <ion-button (click)="gotoReset()" color="success">
       <ion-icon slot="start" name="key-outline"></ion-icon>
       Reset Login Pesdik
     </ion-button>
-    <ion-button (click)="gotoLog()">
+    <!-- <ion-button (click)="gotoLog()" color="warning">
       <ion-icon slot="start" name="walk-outline"></ion-icon>
       Log Aktivitas Pesdik
-    </ion-button>
+    </ion-button> -->
   </div>
 
 
