--- a/src/app/prakerin/pages/prakerin.home/prakerin.home.page.scss
+++ b/src/app/prakerin/pages/prakerin.home/prakerin.home.page.scss
@@ -2,6 +2,6 @@
     height: 100%;
     display:flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
